salti/src/ui/snapshots/salti__ui__consensus_pane__tests__consensus_pane_raw_no_reference.snap
---
source: salti/src/ui/consensus_pane.rs
assertion_line: 436
expression: "render_consensus_pane_text(&alignment, &metrics, Rect::new(0, 0, 100, 5))"
---
┌──────────────────┬───────────────────────────────────────────────────────────────────────────────┐
│Reference Sequence│No reference selected                                                          │
│Consensus Sequence│CATCATCATCATCATCAT                                                             │
│Conservation:     │██████████████████                                                             │
└──────────────────┴───────────────────────────────────────────────────────────────────────────────┘
